kubernetes/cluster_roles/network-policies/applications/frontend.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: frontend
spec:
  order: 80
  selector: app.kubernetes.io/name == 'frontend'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow # allowing web traffic to reach frontend
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == "nginx"
        selector: app.kubernetes.io/name == "ingress-nginx"
      destination:
        ports: [3000]
  egress:
    - action: Allow # Allowing frontend to talk to ArgoCD Repo Server
      protocol: TCP
      destination:
        namespaceSelector: kubernetes.io/metadata.name == "argocd"
        selector: app.kubernetes.io/name == "argocd-repo-server"
        ports: [8081]
